# strtable

./: README.md  pyproject.toml
src/strtable/: __init__.py  core.py  errors.py  styles.py
tests/: __init__.py  test_alignment.py  test_csv.py  test_edges.py  test_format_table.py  test_styles.py
