[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strtable"
version = "0.1.0"
description = "Format tabular data as aligned ASCII/Unicode tables for terminal display and logging"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nripanka Das", email = "nripankadas@gmail.com"}
]
keywords = ["table", "formatting", "ascii", "unicode", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://github.com/nripankadas/strtable"

[tool.setuptools.packages.find]
where = ["src"]
